--- a/index.html
+++ b/index.html
@@ -97,32 +97,37 @@
         </div>
         <!--articulo-->
         <article class="heroe mutante">
-            <figure><img src="img/odisea.jpg" alt="Odisea"></figure>
-            <span class="subtit">La odisea</span>
-            <h2>Homero</h2>
-            <p>La Odisea es un poema épico griego compuesto por 24 cantos, atribuido al poeta griego Homero. Se cree que
-                fue compuesta en el siglo VIII a. C. en los asentamientos que tenía Grecia en la costa oeste del Asia
-                Menor. Según otros autores, la Odisea se completa en el siglo VII.</p>
+            <figure><img src="img/BAJO-UN-CIELO-BANCO.jpg" alt="BAJO-UN-CIELO-BANCO"></figure>
+            <span class="subtit">Bajo un cielo Blanco</span>
+            <h2>Elizabeth Kolbert</h2>
+            <p>Elizabeth Kolbert reflexiona sobre el mundo que hemos creado y los cambios que hemos ocasionado
+                 en nuestro planeta. En su recorrido habla con especialistas biólogos, físicos, ingenieros 
+                 de distintas partes del mundo que, con distintos proyectos, tratan de hacer un mundo más 
+                 sostenible.</p>
             <div>
                 <span><strong>Genero Literario</strong></span>
                 <ul>
-                    <li>Epopeya</li>
-                    <li>Epico</li>
+                    <li>Ensayo</li>
+                    
 
                 </ul>
             </div>
         </article>
         <article class="heroe accidente"><!--hay dos clases-->
-            <figure><img src="img/edipo.jpeg" alt="Edipo"></figure>
-            <span class="subtit">Edipo</span>
-            <h2>Sofocles</h2>
-            <p>Edipo era un rey mítico de Tebas, hijo de Layo y Yocasta que, sin saberlo, mató a su propio padre y
-                desposó a su madre. Epiménides dice que Layo desposó a Euriclea, la hija de Ecfante, y que de esta unión
-                nació Edipo.</p>
+            <figure><img src="img/CUENTO-DE-HADAS-P.png" alt="CUENTO-DE-HADAS-P"></figure>
+            <span class="subtit">Cuento de hadas</span>
+            <h2>Stephen King</h2>
+            <p>El libro se centra en Charlie, un muchacho que ha aprendido a valerse por sí mismo desde
+                 muy pequeño. Su vida dio un giro cuando su madre fue atropellada y su padre empezó a tomar 
+                 sin control.
+
+                El joven tiene como amigos a una perra llamada Radar y a un enigmático ermitaño. Un día, 
+                cuando el eremita fallece, le deja una cinta de casete donde le cuenta su gran secreto: 
+                dentro de su guarida hay un portal que conduce a otro mundo.</p>
             <div>
                 <span><strong>Genero Literario</strong></span>
                 <ul>
-                    <li>Tragedia</li>
+                    <li>Novela</li>
                 </ul>
             </div>
         </article>
@@ -150,66 +155,57 @@
             </div>
         </article>
         <article class="heroe accidente">
-            <figure><img src="img/daredevil.jpg" alt="daredevil"></figure>
-            <span class="subtit">Daredevil</span>
-            <h2>Michael Murdock</h2>
-            <p>Un accidente anormal causó que Daredevil se hiciera ciego, pero aumentaron todos sus otros sentidos a un
-                grado súper-humano. Él puede escuchar sonidos a cuatro bloques de distancia, usando el sonido como un
-                radar para "ver" y realizar movimientos de artes marciales.
+            <figure><img src="img/solo-humo.jpg" alt="solo-humo"></figure>
+            <span class="subtit">Sólo humo</span>
+            <h2>Juan José Millas</h2>
+            <p>Cuando Carlos cumple 18 años recibe la noticia de que su padre, a quien nunca conoció, ha 
+                muerto. Lo más sorpresivo es que recibe en herencia su casa y allí descubrirá un mundo que
+                 lo transformará por completo.
             </p>
             <div>
-                <span><strong>Fortalezas</strong></span>
+                <span><strong>Genero Literario</strong></span>
                 <ul>
-                    <li>Fuerza</li>
-                    <li>Resistencia</li>
-                    <li>Volar</li>
-                    <li>Golpe</li>
-                    <li>Puno</li>
-                    <li>Sanacion</li>
+                    <li>Novela</li>
                 </ul>
             </div>
         </article>
         <article class="heroe accidente">
-            <figure><img src="img/spiderman.jpg" alt="spiderman"></figure>
-            <span class="subtit">Spiderman</span>
-            <h2>Peter Parker</h2>
-            <p>Spider-Man (El hombre araña) puede emitir telarañas desde sus muñecas o a través de cartuchos,
-                dependiendo de la versión de la historieta en que aparece. Tiene un "Spidey-Sense (Sentido araña)" que
-                puede detectar movimiento y peligro acercándose. Con pequeños agarres en sus dedos puede escalar paredes
-                y otras estructuras. Spider-Man usa su habilidad de araña para volar de un edificio a otro, y su cuerpo
-                puede soportar dolor extremo.
+            <figure><img src="img/EL ANCHO MUNDO 2.jpg" alt="EL ANCHO"></figure>
+            <span class="subtit">El ancho mundo</span>
+            <h2>Pierre Lemaitre</h2>
+            <p>Esta novela se centra en los miembros de la familia Pelletier, un clan que ha prosperado
+                 gracias a la fábrica de jabones en Beirut. Con el paso del tiempo, los hijos tienen otros 
+                 planes para su futuro, lejos del negocio familiar.
+
+                Jean, el primogénito, se muda a París para vivir del comercio de telas. François busca 
+                abrirse un hueco como periodista también en la misma ciudad. Por su parte, Étienne se 
+                marcha a Saigón para unirse con su enamorado, pero termina involucrado en una red de tráfico
+                 de capitales. Hélène, la pequeña, busca desesperadamente encontrar su lugar en el mundo y 
+                 perder de vista a sus padres.
             </p>
             <div>
-                <span><strong>Fortalezas</strong></span>
+                <span><strong>Genero Literario</strong></span>
                 <ul>
-                    <li>Fuerza</li>
-                    <li>Resistencia</li>
-                    <li>Volar</li>
-                    <li>Golpe</li>
-                    <li>Puno</li>
-                    <li>Sanacion</li>
+                    <li>Novela</li>
                 </ul>
             </div>
         </article>
         <article class="heroe experimento">
-            <figure><img src="img/4fantasticos.jpg" alt="4fantasticos"></figure>
-            <span class="subtit">4 fantasticos</span>
-            <h2>Equipo Invencible</h2>
-            <p>Los cuatro fantásticos, el primer equipo de superhéroes de Marvel, son cuatro astronautas que fueron
-                transformados cuando un accidente en el espacio los expuso a los rayos gamma. El Sr. Fantástico puede
-                estirar su cuerpo en direcciones múltiples y hacia el exterior como plastilina. El cuerpo de The Thing
-                (La cosa) se convierte en una colección gigante de roca lo que le otorga súper fuerza. La Antorcha
-                Humana puede crear y manipular fuego. La Mujer Invisible puede hacerse invisible a simple vista. Cuando
-                ella toca a otro humano u objeto, puede transferir sus poderes por el tiempo que estén en contacto.
-            </p>
+            <figure><img src="img/De la tierra a la luna.JPG" alt="de la tierra a luna"></figure>
+            <span class="subtit">De la Tierra a la Luna</span>
+            <h2>Julio Verne</h2>
+            <p>En el Gun Club de Baltimore, tres científicos aficionados preparan el mayor 
+                salto intentado nunca por los hombres, sirviendose de un proyectil, que contiene 
+                una cabina para los decimonónicos astronautas, y un gigantesco cañón para dispararlo más 
+                allá de la atmósfera.
             <div>
-                <span><strong>Miembros</strong></span>
+                <span><strong>Genero Literario</strong></span>
                 <ul>
-                    <li>Antorcha</li>
-                    <li>Mole</li>
-                    <li>Mujer Invencible</li>
-                    <li>Elastico</li>
+                    <li>Ciencia ficción </li>
+                    <li>Ficción de aventuras</li>
+                    <li>Novela científica</li>
                 </ul>
+                
             </div>
         </article>
     </section>
