Se agrega Sugerir

--- a/recomendador.html
+++ b/recomendador.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="index.html">Inicio</a></li>
                 <li><a href="recomendador.html">Recomendador de libros</a></li>
-                <li><a href="#">Sugerir Libros</a></li>
+                <li><a href="sugerir.html">Sugerir Libros</a></li>
             </ul>
         </nav>
     </header>
