--- a/agradecimiento.html
+++ b/agradecimiento.html
@@ -2,23 +2,30 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gracias por tu Sugerencia</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin-top: 50px;
-        }
-
-        h1 {
-            color: #4CAF50;
-        }
-    </style>
+    <title> Recomendador Libros </title>
+    <meta charset="utf-8">
+    <!--ayuda a visualizar en dispositivos moviles, desactiva el zoom, y permite al usuario moverse solo de arriba a abajo, width=device-width ancho sea igual al ancho del dispositivo, inicio y maximo sea igual a 1 para no usar zoom-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <!--fuente de Googlefonts-->
+    <link href="http://fonts.googleapis.com/css?family=indie+flower" rel="stylesheet" type="text/css">
+    <script type="text/javascript" src="script.js"></script>
 </head>
 
 <body>
+        <header>
+        <figure>
+            <img src="img/header2.jpg" alt="Recomendador Libros">
+        </figure>
+        <nav>
+            <ul>
+                <li><a href="recomendador.php">Recomendador de libros</a></li>
+                <li><a href="sugerir.php">Sugerir Libros</a></li>
+                <li><a href="bibliotecas.php">Bibliotecas</a></li>
+            </ul>
+        </nav>
+
+    </header>
     <h1>Gracias por tu Sugerencia</h1>
     <p>Tu recomendación ha sido enviada con éxito. ¡Gracias por contribuir!</p>
     <a href="index.php" class="btn">Volver al Inicio</a>
